# jarviscg

./: pyproject.toml
Jarvis/tool/Jarvis/machinery/: imports.py
evaluation/reproducing_RQ12_setup/micro_benchmark/: test_All.sh
src/jarviscg/: cli.py  core.py  jarvis.py  jarvis_cli.py
src/jarviscg/formats/: nuanced.py
src/jarviscg/machinery/: scopes.py
src/jarviscg/processing/: base.py  extProcessor.py
tests/fixtures/: __init__.py  fixture_class.py  other_fixture_class.py
tests/fixtures/_utils/parse/: __init__.py  expr.py
tests/fixtures/core/nested/: klass.py
tests/fixtures/lazyframe/: frame.py
tests/jarviscg/: call_graph_generator_test.py
tests/jarviscg/formats/: nuanced_test.py
