[project]
name = "jarviscg"
version = "0.1.0"
description = "Call graph generator for Python forked from pythonJaRvis/pythonJaRvis.github.io"
readme = "README.md"
authors = [
    { name = "Ayman Nadeem", email = "ayman@nuanced.dev" }
]
requires-python = ">=3.8"
dependencies = [
    "setuptools>=75.3.0",
]

[project.scripts]
jarviscg = "jarviscg:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
